latest requirements file

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,9 @@ python-jose
 passlib
 bcrypt
 elasticsearch
-postgresql
-postgresql-contrib
+spacy
+pdfplumber
+langchain
+pytesseract
+pdf2image
+chardet
